--- a/nextflow.config
+++ b/nextflow.config
@@ -8,4 +8,6 @@ k8s {
     storageClaimName = 'nextflow-shared-claim'
     storageMountPath = '/mount/path'
     storageSubPath = './my-data'
+
+    serviceAccount = 'nextflow-runner'
 }
